--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,7 +10,8 @@ $font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
 body {
   box-sizing: content-box;
   font-family: $font-family;
-  margin: 0 auto;
+  width: 500px;
+  margin: auto;
   line-height: 1.7;
   padding: 4vh 6vw;
   overflow-x: hidden;
