--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -71,7 +71,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family:Recoleta, ui-serif, Georgia, Cambria, Times New Roman, Times, serif
+  font-family:Recoleta, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
