Font change Lora

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,4 +56,12 @@
       {{ page.title }} &mdash; {{ site.title }}
     {% endif %}
   </title>
+  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+  <style>
+  body {
+    font-family: "Lora", sans-serif;
+  }
+  </style>
+
 </head>
