--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -193,6 +193,7 @@ h4,
 h5,
 h6 {
   font-family: Sansita;
+  font-style: ExtraBold;
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
