--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -4,8 +4,7 @@ $color-subtext: hsl(0, 0%, 30%);
 $color-border: hsl(0, 0%, 85%);
 $color-box-background: mix($color-primary, white, 4%);
 $border-radius: 4px;
-$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-  sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+$font-family: Sansita, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 
 @font-face {
     font-family: 'Sansita';
@@ -193,7 +192,6 @@ h4,
 h5,
 h6 {
   font-family: Sansita;
-  font-style: ExtraBold;
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
