--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,3 +1,8 @@
+@font-face {
+    src: url(fonts/Sansita-Bold.ttf);
+    font-family: Sansita;
+}
+
 $color-primary: hsl(0, 0%, 10%);
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
@@ -71,6 +76,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: Sansita;
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
