--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,3 +1,8 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
+    font-family: 'Jost', sans-serif;
+</style>
+
 $color-primary: hsl(0, 0%, 10%);
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
@@ -71,7 +76,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Helvetica;
+  font-family: Jost;
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
