--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,10 @@
       gtag('config', 'G-D59J9ZN5N3');
     </script>
   
+  <style>
+      @import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
+  </style>
+  
   <meta charset="UTF-8">
 
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
