--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,9 @@
       gtag('config', 'G-D59J9ZN5N3');
     </script>
   
-  <style>
-      @import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
+<!-- Import Google fonts // -->
+    <style>
+     @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
   </style>
   
   <meta charset="UTF-8">
