--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,8 +1,3 @@
-
-
-
-
-
 $color-primary: hsl(0, 0%, 10%);
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
@@ -76,7 +71,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Jost', sans-serif;
+  font-family: Raleway', sans-serif;
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
