--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -71,7 +71,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Raleway', sans-serif;
+  font-family: Raleway, sans-serif;
   line-height: 1.3;
   margin-bottom: 0;
   padding-bottom: 0;
