--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -46,9 +46,9 @@ html {
 }
 
 body {
-    width: 87.5%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 84%;
+    margin-left: 8%;
+    margin-right: 8%;
     padding-left: 12.5%;
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
     background-color: #fffff8;
