--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -72,7 +72,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Nunito, sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 0;
