Change body width from 900px to auto

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,7 +10,7 @@ $font-family: 'Nunito', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, 
 body {
   box-sizing: content-box;
   font-family: $font-family;
-  width: 900px;
+  width: auto;
   margin: auto;
   line-height: 1.7;
   padding: 4vh 6vw;
