--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D59J9ZN5N3"></script>
     <script>
@@ -9,13 +9,13 @@
 
       gtag('config', 'G-D59J9ZN5N3');
     </script>
-  
-<!-- Import Google fonts // -->
-    <style>
-     @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
-  </style>
-  
+
   <meta charset="UTF-8">
+
+  <!-- Import Google fonts // -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap');
+    </style>
 
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
